# arangodb

./: --amend  .clang-format  .clang-format-10290.changed.tmp  .ctags_exclude  .cursorignore  .editorconfig  .file-list-js  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .jsbeautifyrc  .pre-commit-config.yaml  .pre-commit-config.yml  .travis.yml  API-Changes-3.0.md  ARANGO-VERSION  ARANGODB_README.md  CHANGELOG  CMakeCPackOptions.cmake.in  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Contributor.md  Create frogbot-scan-repository.yml  DEPRECATED.md  Dockerfile  ERROR_LEVELS.md  EXPERIMENTAL  GEOINDEX_PLAN_DELETE_ME_BEFORE_MERGING_BACK  GNUmakefile  ISSUE_TEMPLATE.md  LES-TODOS  LICENSE  LICENSES-OTHER-COMPONENTS  LICENSES-OTHER-COMPONENTS.md  LOL-JENKINS.md  Makefile  Makefile.all-in-one  Makefile.all-in-one-libev  (+95 more)
UnitTests/: CMakeLists.txt  Makefile  Makefile.am  Makefile.files  Makefile.in  Makefile.unittests  OskarTestSuitesBlackList  OskarTestSuitesBlockList  Runner.cpp  georeg.c  import-1.csv  import-2.csv  import-4.csv  import-edges.json  server.pem  server2.pem  string-buffer-test.c  tls-ca.key  tls.keyfile  unittest.js
UnitTests/Basics/: AttributeNameParserTest.cpp  EndpointTest.cpp  PathEnumeratorTest.cpp  RandomGeneratorTest.cpp  Runner.cpp  StringBufferTest.cpp  StringUtilsTest.cpp  VelocyPackHelper-test.cpp  associative-multi-pointer-nohashcache-test.cpp  associative-multi-pointer-test.cpp  associative-pointer-test.cpp  associative-synced-test.cpp  bson-test.cpp  conversions-test.cpp  csv-test.cpp  files-test.cpp  fpconv-test.cpp  hashes-test.cpp  icu-helper.cpp  icu-helper.h  json-test.cpp  json-utilities-test.cpp  mersenne-test.cpp  priorityqueue-test.cpp  skiplist-test.cpp  string-buffer-test.cpp  string-test.cpp  string-utf8-normalize-test.cpp  string-utf8-test.cpp  structure-size-test.cpp  vector-pointer-test.cpp  vector-test.cpp
UnitTests/Cache/: CachedValue.cpp  FrequencyBuffer.cpp  Manager.cpp  Metadata.cpp  PlainBucket.cpp  PlainCache.cpp  Rebalancer.cpp  State.cpp  TransactionManager.cpp  TransactionWindow.cpp  TransactionalBucket.cpp  TransactionalCache.cpp  TransactionalStore.h  TransactionsWithBackingStore.cpp
UnitTests/Cambridge/: Runner.cpp  georeg.cpp
UnitTests/Geo/: Runner.cpp  georeg.cpp
UnitTests/HttpInterface/: Gemfile  README  api-admin-spec.rb  api-aqlfunction-spec.rb  api-async-spec-timecritical.rb  api-async-spec.rb  api-attributes-spec.rb  api-batch-spec.rb  api-blueprints-spec.rb  api-collection-access-spec.rb  api-collection-mmfiles-spec.rb  api-collection-noncluster-spec.rb  api-collection-rocksdb-noncluster-spec.rb  api-collection-rocksdb-spec.rb  api-collection-spec.rb  api-collection_spec.rb  api-compatibility-spec.rb  api-current-database-spec.rb  api-cursor-spec-cluster.rb  api-cursor-spec-noncluster.rb  api-cursor-spec.rb  api-database-spec.rb  api-document-create-noncluster-spec.rb  api-document-create-spec.rb  api-document-delete-spec.rb  api-document-key-spec.rb  api-document-read-spec.rb  api-document-update-spec.rb  api-documents-spec.rb  api-edge-noncluster-spec.rb  api-edge-spec.rb  api-edges-spec.rb  api-endpoints-spec.rb  api-explain-spec.rb  api-export-spec-timecritical-noncluster.rb  api-export-spec-timecritical.rb  api-foxx-manager-spec-nightly.rb  api-foxx-manager-spec.rb  api-general-graph-spec.rb  api-graph-spec.rb  (+66 more)
UnitTests/HttpReplication/: api-replication-global-spec.rb  api-replication-mmfiles-spec.rb  api-replication-rocksdb-spec.rb
UnitTests/Jutland/: EndpointTest.cpp  StringBufferTest.cpp  StringUtilsTest.cpp
UnitTests/Philadelphia/: associative-pointer-test.cpp  associative-synced-test.cpp  conversions-test.cpp  csv-test.cpp  files-test.cpp  hashes-test.cpp  json-test.cpp  json-utilities-test.cpp  mersenne-test.cpp  string-buffer-test.cpp  string-test.cpp  string-utf8-normalize-test.cpp  string-utf8-test.cpp  structure-size-test.cpp  vector-pointer-test.cpp  vector-test.cpp
UnitTests/RestDocuments/: avocadodb.rb  rest_create-document_spec.rb  rest_delete-document_spec.rb  rest_document_spec.rb  rest_read-document_spec.rb  rest_update-document_spec.rb  run_tests
arangod/: CMakeLists.txt  Makefile  Makefile.files  arangoserver.cmake  dbg.cmake  empty.cpp
arangoirb/: CMakeLists.txt  Makefile.files
arangosh/: CMakeLists.txt  Makefile  Makefile.files  dbg.cmake  install.cmake
client-tools/: CMakeLists.txt  dbg.cmake  install.cmake
lib/: CMakeLists.txt  Makefile  Makefile.bison  Makefile.files  Makefile.flex  Makefile.protobuf  valgrind.supp
tests/: CMakeLists.txt  Greylist.txt  OskarTestSuitesBlackList  README.md  api-test-definitions.txt  arangodb-tinkerpop-provider.yml  arangojs-test-definitions.txt  arangojs-test-definitions.yml  arangojs.yml  gmain.cpp  go-test-definitions.txt  go-test-definitions.yml  go.yml  java-driver-test-definitions.yml  java-test-definitions.txt  java-test-definitions.yml  java.yml  kafka-test-definitions.txt  kafka-test-definitions.yml  kafka.yml  main.cpp  py.yml  python-async.yml  python.yml  replication-test-definitions.txt  rta-dump-test-definitions.txt  rta-test-definitions.txt  spark-datasource-test-definition.yml  spark-datasource.yml  spring-data.yml  standalone_main.cpp  test-definitions-rlog.txt  test-definitions.txt  test-definitions.yml  tests.yml  tinkerpop-provider.yml  ui.yml  unittest.js
utils/: CMakeLists.txt  Makefile.files  README.md  arango-dfdb.in  arango-password.in  arango-upgrade.in  arangom.in  bison-c++.sh  bison-c.sh  checkLogIds.py  clang-format-changed-only  clang-format-check  clang-format-everything  clang-format-everything.sh  clang-format.sh  clang-tidy  clang-tidy.sh  cleanupCFiles  cppcheck-circleci.sh  cppcheck.sh  eslint.sh  examine.py  flex-c++.sh  flex-c.sh  foxx-manager.in  frontendJSFiles.sh  gantt.py  generateAllMetricsDocumentation.py  generateDocumentation.sh  generateErrorfile.py  generateErrorfile.sh  generateExamples  generateExamples.js  generateExamples.py  generateExamples.sh  generateExitCodesFiles.py  generateLicense.py  generateLogIds.py  generateMimetypes.py  generateMimetypes.sh  (+18 more)
(+26847 files in other folders)
